Pagina de Listar Habitaciones ya funciona, agregar el spConsultarHabitaciones a la BD para ejecutarla, de momento lo adjunto comentado en el aspx.cs de ListaHabitacion Hay que colocarle las validaciones de inicio de sesion, de momento se pueden ver las paginas y accederlas ejecutando ListaHabitaciones directamente sin loguearse

--- a/Site.Master
+++ b/Site.Master
@@ -55,6 +55,7 @@
                         <li class="alert-danger" >
                             <asp:LinkButton ID="lnkbtnCierresesion" runat="server" Visible="false" OnClick="lnkbtnCierresesion_Click">Cerrar Sesión</asp:LinkButton>
                         </li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/ListaHabitaciones">Contact</a></li>
                     </ul>
                 </div>
             </div>
