--- a/Site.Master
+++ b/Site.Master
@@ -46,7 +46,7 @@
                 </button>
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/">Home</a></li>
+                        <li class="nav-item"><asp:LinkButton ID="lnkInicio" runat="server" OnClick="lnkInicio_Click" >Inicio</asp:LinkButton></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
                         <li>
@@ -55,7 +55,7 @@
                         <li class="alert-danger" >
                             <asp:LinkButton ID="lnkbtnCierresesion" runat="server" Visible="false" OnClick="lnkbtnCierresesion_Click">Cerrar Sesión</asp:LinkButton>
                         </li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/ListaHabitaciones">Contact</a></li>
+                        <li class="nav-item"><a ID="alistahabitaciones" class="nav-link" Visible="false" runat="server" href="~/Pages/ListaHabitaciones">Lista de habitaciones</a></li>
                     </ul>
                 </div>
             </div>
