--- a/Site.Master
+++ b/Site.Master
@@ -15,6 +15,32 @@
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
+        <style>
+        /* Personalización de la barra de navegación */
+        .navbar-custom {
+            background-color: #0056b3; /* Azul similar a Booking.com */
+            border-color: #0056b3;
+        }
+
+        .navbar-custom .navbar-brand,
+        .navbar-custom .nav-link,
+        .navbar-custom .navbar-toggler-icon {
+            color: white;
+        }
+
+        .navbar-custom .navbar-brand:hover,
+        .navbar-custom .nav-link:hover {
+            color: #ffcc00; /* Color dorado para hover */
+        }
+
+        .footer-custom {
+            background-color: #f8f9fa;
+            padding: 20px;
+            text-align: center;
+        }
+
+    </style>
+
 </head>
 <body>
     <form runat="server">
@@ -37,25 +63,32 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+        <%--<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">--%>
+        <%--<nav class="navbar navbar-expand-lg navbar-light bg-light">--%>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-custom">
             <div class="container">
-                <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                <a class="navbar-brand" runat="server" href="~/">Booking.com</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
+                    <%--<div class="collapse navbar-collapse" id="navbarNav">--%>
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item"><asp:LinkButton ID="lnkInicio" runat="server" OnClick="lnkInicio_Click" >Inicio</asp:LinkButton></li>
+                        <%--<ul class="navbar-nav mr-auto">--%>
+                        <li class="nav-item"><asp:LinkButton ID="lnkInicio" runat="server" OnClick="lnkInicio_Click" CssClass="nav-link" >Inicio</asp:LinkButton></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
-                        <li>
-                            <asp:Label ID="lblnombre" runat="server" text="" Visible="false" ForeColor="White"></asp:Label>
-                        </li>
-                        <li class="alert-danger" >
-                            <asp:LinkButton ID="lnkbtnCierresesion" runat="server" Visible="false" OnClick="lnkbtnCierresesion_Click">Cerrar Sesión</asp:LinkButton>
-                        </li>
                         <li class="nav-item"><a ID="alistahabitaciones" class="nav-link" Visible="false" runat="server" href="~/Pages/ListaHabitaciones">Lista de habitaciones</a></li>
+                        </ul>
+                         <ul class="navbar-nav">   
+                        <li class="nav-item">
+                            <asp:Label ID="lblnombre" runat="server" text="" Visible="false" CssClass="nav-link text-dark"></asp:Label>
+                        </li>
+                        <li class="nav-item" >
+                            <asp:LinkButton ID="lnkbtnCierresesion" runat="server" Visible="false" OnClick="lnkbtnCierresesion_Click" CssClass="nav-link btn btn-danger text-white">Cerrar Sesión</asp:LinkButton>
+                        </li>
+                        
                     </ul>
                 </div>
             </div>
@@ -64,8 +97,13 @@
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
-            <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+            <footer class="footer-custom">
+                <p>&copy; <%: DateTime.Now.Year %> - Booking.com forma parte de Booking Holdings Inc., líder mundial en viajes online y servicios relacionados.
+                                           Copyright © 1996–2024 Booking.com™. Todos los derechos reservados.</p>
+  
+             <asp:Image ID="Image1" runat="server" Height="135px" ImageAlign="Middle" 
+                 ImageUrl="~/Resources/booking logo.png" Width="902px" style="display: block; margin: 0 auto;" />
+
             </footer>
         </div>
     </form>
