--- a/Site.Master
+++ b/Site.Master
@@ -77,13 +77,13 @@
                     <ul class="navbar-nav flex-grow-1">
                         <%--<ul class="navbar-nav mr-auto">--%>
                         <li class="nav-item"><asp:LinkButton ID="lnkInicio" runat="server" OnClick="lnkInicio_Click" CssClass="nav-link" >Inicio</asp:LinkButton></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
+                        <%--<li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>--%>
                         <li class="nav-item"><a ID="alistahabitaciones" class="nav-link" Visible="false" runat="server" href="~/Pages/ListaHabitaciones">Lista de habitaciones</a></li>
                         </ul>
                          <ul class="navbar-nav">   
                         <li class="nav-item">
-                            <asp:Label ID="lblnombre" runat="server" text="" Visible="false" CssClass="nav-link text-dark"></asp:Label>
+                            <asp:Label ID="lblnombre" runat="server" text="" Visible="false" CssClass="nav-link text-light"></asp:Label>
                         </li>
                         <li class="nav-item" >
                             <asp:LinkButton ID="lnkbtnCierresesion" runat="server" Visible="false" OnClick="lnkbtnCierresesion_Click" CssClass="nav-link btn btn-danger text-white">Cerrar Sesión</asp:LinkButton>
