--- a/DataModels/MyDatabase.tt
+++ b/DataModels/MyDatabase.tt
@@ -5,7 +5,7 @@
 <#@ include file="$(LinqToDBT4SqlServerTemplatesPath)LinqToDB.SqlServer.Tools.ttinclude" once="true" #>
 <#@ include file="$(LinqToDBT4SqlServerTemplatesPath)PluralizationService.ttinclude"     once="true" #>
 <# 
-/* 
+/*   
 	1. Create new *.tt file (e.g. MyDatabase.tt) in a folder where you would like to generate your data model
 		and copy content from this file to it. For example:
 
@@ -116,7 +116,7 @@
  
 	// to configure GetSchemaOptions properties, add them here, before load metadata call
  
-	LoadSqlServerMetadata("Data Source=DEIVIDILG\\DEIVIDILG;Database=PV_ProyectoFinal;Integrated Security=True");
+	LoadSqlServerMetadata("Data Source=Camila;Database=PV_ProyectoFinal;Integrated Security=True");
 //	LoadSqlServerMetadata(".", "MyDatabase"); // Integrated Security
 //	LoadSqlServerMetadata(string connectionString);
  
