--- a/Site.Master
+++ b/Site.Master
@@ -21,13 +21,19 @@
         border: none;
         background-color: transparent;
         color: white;
+        font-size:2rem;
     }
 
         /* Personalización de la barra de navegación */
         .navbar-custom {
             background-color: #0056b3; /* Azul similar a Booking.com */
             border-color: #0056b3;
+            padding: 20px 30px; /* Ajusta el padding para aumentar el ancho */
         }
+
+         .navbar-custom .navbar-nav .nav-item {
+        margin-right: 20px; /* Aumenta este valor para más separación */
+    }
 
         .navbar-custom .navbar-brand,
         .navbar-custom .nav-link,
@@ -75,7 +81,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-custom">
             <div class="container">
                 <%--<a class="navbar-brand" runat="server" href="~/">Booking.com</a>--%>
-               <asp:Button ID="btnBooking" class="navbar-brand" runat="server" OnClick="btnBooking_Click" CssClass="btn btn-custom navbar-brand" Text="Booking.com" />
+               <asp:Button ID="btnBooking" class="navbar-brand" runat="server" OnClick="btnBooking_Click" CssClass="btn btn-custom navbar-brand" Text="Booking.com" CausesValidation="false" />
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <%--<div class="collapse navbar-collapse" id="navbarNav">--%>
                     <ul class="navbar-nav flex-grow-1">
@@ -84,7 +90,9 @@
                         <%--<li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>--%>
                         <li class="nav-item"><a ID="alistahabitaciones" class="nav-link" Visible="false" runat="server" href="~/Pages/ListaHabitaciones">Lista de habitaciones</a></li>
-                        </ul>
+                    <li class="nav-item"><a ID="aGestionarReservaciones" class="nav-link" Visible="false" runat="server" href="~/Pages/GestionarReservaciones">Gestionar Reservaciones</a></li>    
+                    <li class="nav-item"><a ID="aMisReservaciones" class="nav-link" Visible="false" runat="server" href="~/Pages/MisReservaciones">Mis Reservaciones</a></li>   
+                    </ul>
                          <ul class="navbar-nav">   
                         <li class="nav-item">
                             <asp:Label ID="lblnombre" runat="server" text="" Visible="false" CssClass="nav-link text-light"></asp:Label>
