--- a/Site.Master
+++ b/Site.Master
@@ -90,8 +90,8 @@
                         <%--<li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>--%>
                         <li class="nav-item"><a ID="alistahabitaciones" class="nav-link" Visible="false" runat="server" href="~/Pages/ListaHabitaciones">Lista de habitaciones</a></li>
-                    <li class="nav-item"><a ID="aGestionarReservaciones" class="nav-link" Visible="false" runat="server" href="~/Pages/GestionarReservaciones">Gestionar Reservaciones</a></li>    
-                    <li class="nav-item"><a ID="aMisReservaciones" class="nav-link" Visible="false" runat="server" href="~/Pages/MisReservaciones">Mis Reservaciones</a></li>   
+                    <li class="nav-item"><asp:LinkButton ID="lnkGestionarReservacion" class="nav-item" runat="server" CausesValidation="false" Visible="false" OnClick="lnkGestionarReservacion_Click" CssClass="nav-link">Gestionar reservaciones</asp:LinkButton></li>    
+                    <li class="nav-item"><asp:LinkButton ID="lnkMisreservaciones" runat="server" CausesValidation="false" Visible="false" OnClick="lnkMisreservaciones_Click" CssClass="nav-link">Mis reservaciones</asp:LinkButton></li>   
                     </ul>
                          <ul class="navbar-nav">   
                         <li class="nav-item">
